--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,6 +42,14 @@
                 <p>Bootstrap v5.2.3</p>
                 <h1>Date Today:</h1> <p th:text="${dateNow}"></p>
             </div>
+
+            <div class="text-center mt-10">
+                <th:block th:each="club : ${clubs}">
+                    <img th:src="${club.photoUrl}" alt="..."/>
+                    <p th:text="${club.title}"></p>
+                    <p th:text="${club.content}"></p>
+                </th:block>
+            </div>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
